# seqnmf-linalg

./: Cargo.toml  README.md
src/: lib.rs  linalg.rs  update.rs
